--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:8080}
+server.port=${PORT:8181}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
@@ -8,3 +8,7 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,com.example.application
 vaadin.pnpm.enable = true
+
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
